# codeur

./: .agent.example.yaml  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENT_INTEGRATION_PLAN.md  CODE_PLANNER_ENHANCED.md  CODE_PLANNER_STATUS.md  DASHBOARD_INTEGRATION_PLAN.md  DEEP_CONTEXT_PASSING_SPECIFICATION.md  DISCORD_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  KAFKA_TEST_RESULTS.md  Live API - WebSockets API reference.txt  MANIFEST.in  Makefile  QUICKSTART.md  README.md  TEST_RESULTS.md  VOICE_AGENT_SUMMARY.md  WSL_AUDIO_SETUP.md  agent.sh  check_audio_setup.sh  check_voice_features.py  clean_chromadb.sh  demo_webhook.py  dev-requirements.in  dev-requirements.txt  docker-compose.kafka.yml  fix_chromadb.py  fix_indentation.py  flow.txt  frontend_feasibility_analysis.md  improvement_plan.txt  minimal_webhook_server.py  play_recording.py  pyproject.toml  pytest.ini  quickstart.sh  (+93 more)
.architect_state/: context_graph.json
.architecture/: ARCHITECTURE.md  voice-agent-architecture.json
config/: messaging.yaml
docs/: ADAPTIVE_RAG_ROLLOUT.md  ADAPTIVE_SIMILARITY_GATING.md  AGENT_CONFIGURATION.md  AGENT_RAG_INTEGRATION_STATUS.md  CODE_PLANNER_RAG_STATUS.md  CONTEXT_AWARE_ARCHITECT.md  CONTEXT_GRAPH_IMPLEMENTATION.md  CONTEXT_GRAPH_INTEGRATION_SUMMARY.md  CONTEXT_GRAPH_PLAN.md  E2E_TEST_GUIDE.md  FEATURE_IMPLEMENTATION_PLAN.md  FRONTEND_FEASIBILITY.md  FRONTEND_IMPLEMENTATION_PROGRESS.md  FRONTEND_MOCKUPS.md  FRONTEND_MODERNIZATION_PLAN.md  FULL_SPECIFICATION_MATRIX.md  IDEA_SCRATCHPAD.txt  IMPLEMENTATION_PRIORITY_GUIDE.md  WEBHOOK_SYSTEM.md  (+21 more)
(+392 files in other folders)
